# stduuid

./: CMakeLists.txt
include/: uuid.h
lib/cmake/: libuuid-config.cmake
